# mocap-for-one

./: .gitignore  Cargo.toml  index.html  mocap_for_one_config.json  rustfmt.toml
src/: app_state.rs  camera_stream.rs  lib.rs  main.rs  opencv_cam.rs  pipeline.rs  python-utils.py  python_utils.rs  threading_cam.rs  util.rs  vsrc.rs  workload.rs
src/widgets/: calibration_modal.rs  camera_streams.rs  mod.rs  unity_camera_modal.rs  video_capture_modal.rs  video_viewer.rs
www/: elm.json  index.html  main.js
www/elm-stuff/0.19.1/: Main.elmi  Main.elmo
www/src/: Main.elm
